--- a/src/components/Join/Join.css
+++ b/src/components/Join/Join.css
@@ -17,7 +17,7 @@
     width: 10.5rem;
     border: 2px solid var(--orange);
     border-radius: 20%;
-    margin: -10px;
+    margin: -10px 0;
 }
 
 .left-j>div{
